@@ -62,6 +62,9 @@ urlpatterns += patterns('pulog.views',
     url(r'^archives/category/(?P<slugname>[^/]+)/$', 'category_view', name = 'post-category'),
     (r'^archives/category/(?P<slugname>[^/]+)/page/(?P<page_num>\d+)/$', 
         'category_view'),
+    url(r'^archives/tag/(?P<slug>[^/]+)/$', 'tag_view', name = 'post-tag'),
+    (r'^archives/tag/(?P<slug>[^/]+)/page/(?P<page_num>\d+)/$', 
+        'tag_view'),
     (r'^archives/(?P<year>\d{4})/(?P<month>\d{1,2})/$', 'archive_view'),
     (r'^archives/(?P<year>\d{4})/(?P<month>[^/]+)/page/(?P<page_num>\d+)/$',
         'archive_view'),
